--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ seaborn>=0.12.0
 
 # Machine Learning
 scikit-learn>=1.3.0
-xgboost>=2.0.0
+xgboost==2.0.3  # Pinned for SHAP compatibility
 shap>=0.43.0
 
 # Hyperparameter Tuning
@@ -29,7 +29,6 @@ ipywidgets>=8.0.0
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 streamlit>=1.28.0
-streamlit-shap>=1.0.2
 
 # Cloud Storage
 boto3>=1.29.0
