Organize internal docs and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,10 @@ temp/
 # Infrastructure temporary files
 infrastructure/ecs-task-*-local.json
 infrastructure/*.bak
+
+# Developer notes and internal documentation
+docs/dev-notes/
+
+# MLflow experiment tracking
+mlruns/
+jupyter-notebook/mlruns/
